@@ -1,0 +1,12 @@
+
+.*
+
+
+Disassembly of section \.text:
+
+10000000 <\.f1>:
+10000000:	80 22 80 08 	l       r1,-32760\(r2\)
+			10000002: R_TOC	sym0.*
+#...
+1000fff4:	80 22 7f fc 	l       r1,32764\(r2\)
+			1000fff6: R_TOC	asym8190.*
