@@ -1,0 +1,12 @@
+
+.*
+
+
+Disassembly of section \.text:
+
+0000000010000000 <.f1>:
+    10000000:	e8 22 80 10 	ld      r1,-32752\(r2\)
+			10000002: R_TOC	sym0.*
+#...
+    10007ff4:	e8 22 7f f8 	ld      r1,32760\(r2\)
+			10007ff6: R_TOC	asym4094.*
